kubernetes/akka-cluster-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: akka-cluster-demo
  name: akka-cluster-demo
  namespace: akka-cluster-1
spec:
  replicas: 2
  selector:
    matchLabels:
     app: akka-cluster-demo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: akka-cluster-demo
        actorSystemName: akka-cluster-demo
    spec:
      containers:
      - name: akka-cluster-demo
# Use the following line when running with minishift
        image: akka-cluster-demo:1.0.0
# Use the following line when running with OpenShift and using the internal container registry
#        image: image-registry.openshift-image-registry.svc:5000/akka-cluster-1/akka-cluster-demo:1.0.0
        imagePullPolicy: Never
        livenessProbe:
          tcpSocket:
            port: 8558
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        # akka remoting
        - name: remoting
          containerPort: 2552
          protocol: TCP
        # akka-management bootstrap
        # must match up with contact-point-discovery.port-name for bootstrap
        - name: management
          containerPort: 8558
          protocol: TCP
