kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: akka-cluster-demo
  namespace: akka-cluster-1
spec:
  ports:
    - name: service
      port: 8080
      targetPort: 8080
      nodePort: 30007
    - name: service2
      port: 2552
      targetPort: 8080
    - name: service3
      port: 8558
      targetPort: 8080
  selector:
    app: akka-cluster-demo
